10-31 登录检查bug修复

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,7 +40,9 @@
             android:textColor="@color/black"
             android:textSize="12sp"/>
 
-        <TextView android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/version"
+            android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:padding="16dp"
