--- a/app/src/main/res/layout/activity_bbs_add.xml
+++ b/app/src/main/res/layout/activity_bbs_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,20 +50,21 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_below="@+id/view2">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
@@ -84,9 +85,7 @@
                     android:imeOptions="actionNext"
                     android:maxLines="1"
                     android:nextFocusForward="@+id/edit_intro"
-                    android:paddingLeft="4dip"
-                    android:paddingRight="4dip"
-                    android:singleLine="true"></EditText>
+                    android:padding="4dip"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -99,18 +98,14 @@
                 <RelativeLayout
                     android:id="@+id/patent_intro"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/selector_edittext"
                     android:gravity="left|top"
                     android:inputType="textMultiLine"
                     android:minLines="15"
-                    android:layout_marginBottom="48dp"
-                    android:paddingLeft="4dip"
-                    android:paddingRight="4dip">
+                    android:padding="4dip">
                     <com.ddgj.dd.view.RichTextEditor
-                        android:layout_marginTop="1dp"
-                        android:layout_marginBottom="1dp"
                         android:id="@+id/richEditor"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
@@ -118,10 +113,7 @@
                         android:background="#fff" />
                 </RelativeLayout>
 
-
-
             </LinearLayout>
-
 
         </LinearLayout>
     </ScrollView>
@@ -162,5 +154,5 @@
     </RelativeLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
 
