--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".activity.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_splash_bg"
-    android:scaleType="fitXY"/>
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_web_launcher"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
