--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".activity.WebActivity">
+        android:orientation="vertical">
+
         <RelativeLayout
             style="@style/ActionBarLightTheme"
             android:background="@color/grey_lightE">
@@ -33,60 +32,94 @@
         <RelativeLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
         </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/comment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/grey_lightE"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:visibility="invisible">
-        <EditText android:id="@+id/comment_content"
-                  android:layout_width="0dp"
-                  android:layout_height="wrap_content"
-                  android:layout_margin="8dp"
-                  android:layout_weight="1"
-                  android:background="@drawable/shape_comment_send_btn_bg"
-                  android:gravity="top"
-                  android:hint="评论"
-                  android:maxLines="3"
-                  android:minLines="3"
-                  android:padding="4dp"/>
-        <LinearLayout android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical">
-
-            <Button android:layout_width="40dp" android:layout_height="30dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/ease_btn_blue_selector"
-                    android:onClick="sendCommentClick"
-                    android:text="发送"
-                    android:textColor="@color/white"
-                    android:textSize="12dp"/>
-            <Button android:layout_width="40dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/ease_btn_blue_selector"
-                    android:onClick="showCommentClick"
-                    android:text="查看"
-                    android:textColor="@color/white"
-                    android:textSize="12dp"/>
+        <LinearLayout
+            android:id="@+id/comment_container"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/grey_lightE"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:visibility="gone">
+            <TextView android:layout_width="0dp"
+                      android:layout_height="32dp"
+                      android:layout_weight="1"
+                      android:background="@drawable/shape_login_edit_text_bg"
+                      android:clickable="true"
+                      android:gravity="center_vertical"
+                      android:onClick="commentClick"
+                      android:paddingLeft="16dp"
+                      android:text="@string/comment"
+                      android:textColor="@color/black"/>
+            <ImageView android:layout_width="40dp"
+                       android:layout_height="40dp"
+                       android:layout_marginLeft="16dp"
+                       android:clickable="true"
+                       android:onClick="supportClick"
+                       android:padding="8dp"
+                       android:src="@mipmap/ic_thumb_up_grey600_24dp"/>
+            <ImageView android:layout_width="40dp"
+                       android:layout_height="40dp"
+                       android:layout_marginLeft="16dp"
+                       android:padding="8dp"
+                       android:src="@mipmap/ic_stars_grey600_24dp"
+                       android:visibility="gone"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/grey_lightE"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone">
+            <EditText android:id="@+id/comment_content"
+                      android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_margin="8dp"
+                      android:layout_weight="1"
+                      android:background="@drawable/shape_comment_send_btn_bg"
+                      android:gravity="top"
+                      android:hint="评论"
+                      android:maxLines="3"
+                      android:minLines="3"
+                      android:padding="4dp"/>
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:orientation="vertical">
+
+                <Button android:layout_width="40dp" android:layout_height="30dp"
+                        android:layout_marginRight="8dp"
+                        android:background="@drawable/ease_btn_blue_selector"
+                        android:onClick="sendCommentClick"
+                        android:text="发送"
+                        android:textColor="@color/white"
+                        android:textSize="12dp"/>
+                <Button android:layout_width="40dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/ease_btn_blue_selector"
+                        android:onClick="showCommentClick"
+                        android:text="查看"
+                        android:textColor="@color/white"
+                        android:textSize="12dp"/>
+            </LinearLayout>
 
 
+        </LinearLayout>
     </LinearLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_above="@id/comment_container"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:src="@mipmap/ic_mode_edit_white_24dp"
