--- a/app/src/main/res/layout/item_order_factory_item.xml
+++ b/app/src/main/res/layout/item_order_factory_item.xml
@@ -24,15 +24,15 @@
                       android:layout_height="0dp"
                       android:layout_weight="5"
                       android:gravity="center_vertical"
-                      android:text="公司名称"
+                      android:maxLines="1"
+                      android:ellipsize="end"
                       android:textColor="@color/black"
                       android:textSize="16sp"/>
             <TextView android:id="@+id/field"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_weight="5"
-                      android:gravity="center_vertical"
-                      android:text="领域"/>
+                      android:gravity="center_vertical"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
