--- a/app/src/main/res/layout/plate_all_list.xml
+++ b/app/src/main/res/layout/plate_all_list.xml
@@ -1,69 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="发布者" />
-
-
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/sItemIcon"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dip"
-        android:layout_toRightOf="@+id/sItemIcon"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:text="最新自动送飞机"
-        android:textColor="@color/all_bg_color"
-        android:textSize="16.0sp"
-        android:textStyle="bold" />
-
-    <RelativeLayout
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:padding="8dp">
+    <com.ddgj.dd.view.CircleImageView
+        android:id="@+id/icon"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@mipmap/ic_account_circle_grey600_24dp"
+        app:border_color="@color/white"
+        app:border_width="1dp"/>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="28dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
-            android:layout_height="28sp"
-            android:gravity="center"
-            android:paddingLeft="5dp"
-            android:text="2016-3-6" />
+            android:layout_height="wrap_content"/>
+
 
         <TextView
-           android:layout_toLeftOf="@+id/comment_number"
-            android:drawableLeft="@mipmap/browse_number"
-            android:id="@+id/browse_number"
+            android:id="@+id/info"
             android:layout_width="wrap_content"
-            android:layout_height="28sp"
-            android:gravity="center"
-            android:layout_gravity=""
-            android:paddingLeft="10dp"
-            android:text="201" />
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/sItemIcon"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/sItemIcon"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textSize="16.0sp"/>
 
-        <TextView
-            android:drawableLeft="@mipmap/comment_number"
-            android:id="@+id/comment_number"
-            android:layout_width="wrap_content"
-            android:layout_height="28sp"
-            android:paddingRight="10dp"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:paddingLeft="10dp"
-            android:text="32" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="28sp"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/browse_number"
+                android:layout_width="wrap_content"
+                android:layout_height="28sp"
+                android:layout_gravity=""
+                android:layout_toLeftOf="@+id/comment_number"
+                android:drawableLeft="@mipmap/browse_number"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/comment_number"
+                android:layout_width="wrap_content"
+                android:layout_height="28sp"
+                android:layout_alignParentRight="true"
+                android:drawableLeft="@mipmap/comment_number"
+                android:gravity="center"
+                android:layout_marginLeft="8dp"/>
 
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-
+    </LinearLayout>
 </LinearLayout>
