--- a/app/src/main/res/layout/activity_comment_list.xml
+++ b/app/src/main/res/layout/activity_comment_list.xml
@@ -25,6 +25,35 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:divider="@color/alpha"
-        android:layout_height="match_parent">
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:layout_height="0dp">
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/grey_lightE"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <EditText
+            android:id="@+id/et_comment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/comment"
+            android:textSize="14dp"/>
+
+        <ImageView
+            android:id="@+id/send_comment"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:clickable="true"
+            android:onClick="sendCommentClick"
+            android:src="@mipmap/ic_send_grey600_24dp"/>
+    </LinearLayout>
 </LinearLayout>
