--- a/app/src/main/res/layout/activity_plate_deatils.xml
+++ b/app/src/main/res/layout/activity_plate_deatils.xml
@@ -108,23 +108,42 @@
 
     </ScrollView>
     <View
-        style="@style/LineGrey1px"
-        android:layout_above="@+id/bottom"/>
+        style="@style/LineGrey1px"/>
     <LinearLayout
-        android:id="@+id/bottom"
+        android:id="@+id/comment_container"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
-        android:gravity="right">
+        android:background="@color/grey_lightE"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:visibility="visible">
         <TextView
             android:id="@+id/tv_comment"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawableTop="@mipmap/ic_comment"
-            android:gravity="center"
-            android:text="评论"
-            android:textSize="10dp"/>
-
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_login_edit_text_bg"
+            android:clickable="true"
+            android:gravity="center_vertical"
+            android:onClick="commentClick"
+            android:paddingLeft="16dp"
+            android:text="@string/comment"
+            android:textColor="@color/black"/>
+        <ImageView android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:layout_marginLeft="16dp"
+                   android:clickable="true"
+                   android:onClick="supportClick"
+                   android:padding="8dp"
+                   android:src="@mipmap/ic_thumb_up_grey600_24dp"
+                   android:visibility="gone"/>
+        <ImageView android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:layout_marginLeft="16dp"
+                   android:padding="8dp"
+                   android:src="@mipmap/ic_stars_grey600_24dp"
+                   android:visibility="gone"/>
     </LinearLayout>
 </RelativeLayout>
