--- a/app/src/main/res/layout/activity_bbs_comment.xml
+++ b/app/src/main/res/layout/activity_bbs_comment.xml
@@ -27,30 +27,45 @@
         android:background="@color/white">
 
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/grey_lightE"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:layout_height="wrap_content">
+        <View
+            android:layout_alignParentBottom="true"
 
-        <EditText
-            android:id="@+id/et_comment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/comment"
-            android:textSize="14dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/up_shadow"></View>
+        <LinearLayout
 
-        <ImageView
-            android:id="@+id/send_comment"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:padding="8dp"
-            android:src="@mipmap/ic_send_grey600_24dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/grey_lightE"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+
+            <EditText
+                android:id="@+id/et_comment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/comment"
+                android:textSize="14dp"/>
+
+            <ImageView
+                android:id="@+id/send_comment"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:padding="8dp"
+                android:src="@mipmap/ic_send_grey600_24dp"/>
+        </LinearLayout>
+
+
     </LinearLayout>
+
 </RelativeLayout>
