--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,25 @@
     android:orientation="vertical"
     android:background="@color/grey_light"
     tools:context="com.ddgj.dd.activity.MainActivity">
-    <com.ddgj.dd.view.CustomViewPager
-        android:id="@+id/act_main_content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></com.ddgj.dd.view.CustomViewPager>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="0dp">
+        <com.ddgj.dd.view.CustomViewPager
+            android:id="@+id/act_main_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        </com.ddgj.dd.view.CustomViewPager>
+        <View
+            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/up_shadow"></View>
+    </RelativeLayout>
+
     <View android:layout_width="match_parent" android:layout_height="4dp"
     android:background="@color/colorPrimary"/>
     <RadioGroup
