--- a/app/src/main/res/layout/activity_plate_deatils.xml
+++ b/app/src/main/res/layout/activity_plate_deatils.xml
@@ -16,6 +16,10 @@
             style="@style/TitleBarTextTheme"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:paddingLeft="40dp"
+            android:paddingRight="32dp"
             android:textStyle="bold"/>
 
     </RelativeLayout>
@@ -37,8 +41,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/post_sub_title"
@@ -125,9 +128,7 @@
             android:layout_height="32dp"
             android:layout_weight="1"
             android:background="@drawable/shape_login_edit_text_bg"
-            android:clickable="true"
             android:gravity="center_vertical"
-            android:onClick="commentClick"
             android:paddingLeft="16dp"
             android:text="@string/comment"
             android:textColor="@color/black"/>
