--- a/app/src/main/res/layout/activity_factory.xml
+++ b/app/src/main/res/layout/activity_factory.xml
@@ -77,6 +77,7 @@
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
             android:onClick="addClick"
+            android:visibility="invisible"
             android:src="@mipmap/ic_add_white_24dp"
             app:backgroundTint="@color/colorPrimary"/>
         <LinearLayout
