--- a/app/src/main/res/layout/item_factory_list_factory.xml
+++ b/app/src/main/res/layout/item_factory_list_factory.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/img_factory_pic"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop"
-                />
+        <ImageView
+            android:id="@+id/img_factory_pic"
+            android:layout_width="120dp"
+            android:layout_height="128dp"
+            android:scaleType="centerCrop"
+        />
 
 
         <LinearLayout
@@ -24,84 +25,70 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="5dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:paddingTop="8dp"
-                android:paddingLeft="15dp"
-                android:paddingRight="10dp"
                 android:text="这是一个悲伤的故事"
                 android:textColor="@color/factorysizecolor"
                 android:textSize="16sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="4dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
                     android:text="领域"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="10dp"
-                    />
+                />
                 <TextView
                     android:id="@+id/tv_factory_field"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/factorysize"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"/>
+                    android:layout_marginLeft="8dp"
+                    android:maxLines="1"
+                    android:textColor="@color/factorysize"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="4dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="4dp"
                     android:text="规模"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="10dp"
-                    />
+                />
                 <TextView
                     android:id="@+id/tv_factory_scale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:layout_marginLeft="4dp"
+                    android:maxLines="1"
                     android:textColor="@color/factorysize"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"/>
+                    android:textSize="12dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="4dp">
                 <TextView
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
                     android:text="地址"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="10dp"
-                    />
+                />
                 <TextView
                     android:id="@+id/tv_factory_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:layout_marginLeft="8dp"
+                    android:maxLines="2"
                     android:textColor="@color/factorysize"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"/>
+                    android:textSize="12dp"/>
             </LinearLayout>
         </LinearLayout>
 
